--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Shanliang Yao"
-  avatar           : "images/avatar.png"
+  avatar           : "images/avatar.jpeg"
   bio              : "Yancheng Institute of Technology"
   location         : "Yancheng, China"
   employer         :
